--- a/pages/login.html
+++ b/pages/login.html
@@ -21,14 +21,17 @@
 				<li class="active">
 					<a href="../index.html"><span class="fa fa-home mr-3"></span> Home</a>
 				</li>
-				<li class="">
-					<a href="#"><span class="fa fa-newspaper-o mr-3"></span> News</a>
+				<li>
+					<a href="./news.html"><span class="fa fa-newspaper-o mr-3"></span> News</a>
 				</li>
 				<li>
-					<a href="#"><span class="fa fa-list mr-3"></span> Todo List</a>
+					<a href="./todo.html"><span class="fa fa-list mr-3"></span> Todo List</a>
 				</li>
 				<li>
-					<a href="#"><span class="fa fa-cogs mr-3"></span> Settings</a>
+					<a href="./search.html"><span class="fa fa-cogs mr-3"></span> Search</a>
+				</li>
+				<li>
+					<a href="./setting.html"><span class="fa fa-cogs mr-3"></span> Settings</a>
 				</li>
 			</ul>
 
